--- a/latte/KiteAB - Windows Style.layout.latte
+++ b/latte/KiteAB - Windows Style.layout.latte
@@ -1,151 +1,15 @@
 [ActionPlugins][1]
 RightButton;NoModifier=org.kde.latte.contextmenu
 
-[Containments][15]
-PreloadWeight=0
-activityId=
-formfactor=2
-immutability=1
-lastScreen=-1
-location=4
-plugin=org.kde.plasma.private.systemtray
-wallpaperplugin=org.kde.image
-
-[Containments][15][Applets][16]
-immutability=1
-plugin=org.kde.kdeconnect
-
-[Containments][15][Applets][16][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][17]
-immutability=1
-plugin=org.kde.plasma.clipboard
-
-[Containments][15][Applets][17][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][18]
-immutability=1
-plugin=org.kde.plasma.devicenotifier
-
-[Containments][15][Applets][18][Configuration]
-PreloadWeight=9
-
-[Containments][15][Applets][19]
-immutability=1
-plugin=org.kde.plasma.notifications
-
-[Containments][15][Applets][19][Configuration]
-PreloadWeight=44
-
-[Containments][15][Applets][19][Configuration][ConfigDialog]
-DialogHeight=540
-DialogWidth=720
-
-[Containments][15][Applets][21]
-immutability=1
-plugin=org.kde.plasma.networkmanagement
-
-[Containments][15][Applets][21][Configuration]
-PreloadWeight=16
-
-[Containments][15][Applets][28]
-immutability=1
-plugin=org.kde.plasma.volume
-
-[Containments][15][Applets][28][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][29]
-immutability=1
-plugin=org.kde.plasma.keyboardindicator
-
-[Containments][15][Applets][29][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][29][Configuration][ConfigDialog]
-DialogHeight=540
-DialogWidth=720
-
-[Containments][15][Applets][29][Configuration][General]
-key=Caps Lock,Num Lock
-
-[Containments][15][Applets][31]
-immutability=1
-plugin=org.kde.plasma.printmanager
-
-[Containments][15][Applets][31][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][32]
-immutability=1
-plugin=org.kde.plasma.vault
-
-[Containments][15][Applets][32][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][33]
-immutability=1
-plugin=org.kde.ktp-contactlist
-
-[Containments][15][Applets][33][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][34]
-immutability=1
-plugin=org.kde.plasma.battery
-
-[Containments][15][Applets][34][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][34][Configuration][ConfigDialog]
-DialogHeight=540
-DialogWidth=720
-
-[Containments][15][Applets][34][Configuration][General]
-showPercentage=true
-
-[Containments][15][Applets][36]
-immutability=1
-plugin=org.kde.plasma.nightcolorcontrol
-
-[Containments][15][Applets][36][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][70]
-immutability=1
-plugin=org.kde.plasma.keyboardlayout
-
-[Containments][15][Applets][70][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][72]
-immutability=1
-plugin=org.kde.plasma.mediacontroller_plus
-
-[Containments][15][Applets][72][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][73]
-immutability=1
-plugin=org.kde.plasma.mediacontroller
-
-[Containments][15][Applets][73][Configuration]
-PreloadWeight=0
-
-[Containments][15][General]
-extraItems=org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.keyboardindicator,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.plasma.mediacontroller_plus,org.kde.plasma.keyboardlayout
-knownItems=org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.keyboardindicator,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.plasma.mediacontroller_plus,org.kde.plasma.keyboardlayout
-
-[Containments][4]
+[Containments][1]
 activityId=
 byPassWM=false
+dockWindowBehavior=true
 enableKWinEdges=true
 formfactor=2
 immutability=1
 isPreferredForShortcuts=false
-lastScreen=-1
+lastScreen=10
 location=4
 name=
 onPrimary=true
@@ -154,126 +18,239 @@ raiseOnActivityChange=false
 raiseOnDesktopChange=false
 settingsComplexity=4
 timerHide=700
-timerShow=0
+timerShow=200
 viewType=1
 visibility=0
 wallpaperplugin=org.kde.image
 
-[Containments][4][Applets][12]
-immutability=1
-plugin=org.kde.plasma.digitalclock
-
-[Containments][4][Applets][12][Configuration]
-PreloadWeight=40
-
-[Containments][4][Applets][12][Configuration][Appearance]
-customDateFormat=ddd
-dateFormat=custom
-enabledCalendarPlugins=/usr/lib/qt/plugins/plasmacalendarplugins/holidaysevents.so
-showDate=false
-use24hFormat=2
-
-[Containments][4][Applets][12][Configuration][ConfigDialog]
-DialogHeight=558
-DialogWidth=720
-
-[Containments][4][Applets][14]
-immutability=1
-plugin=org.kde.plasma.systemtray
-
-[Containments][4][Applets][14][Configuration]
-PreloadWeight=84
-SystrayContainmentId=15
-
-[Containments][4][Applets][23]
+[Containments][1][Applets][110]
 immutability=1
 plugin=org.kde.plasma.notifications
 
-[Containments][4][Applets][23][Configuration]
-PreloadWeight=84
+[Containments][1][Applets][110][Configuration]
+PreloadWeight=47
 
-[Containments][4][Applets][61]
+[Containments][1][Applets][2]
 immutability=1
-plugin=org.kde.milou
+plugin=org.kde.latte.plasmoid
 
-[Containments][4][Applets][61][Configuration]
+[Containments][1][Applets][2][Configuration]
 PreloadWeight=0
 
-[Containments][4][Applets][77]
-immutability=1
-plugin=org.kde.plasma.icon
-
-[Containments][4][Applets][77][Configuration]
-PreloadWeight=42
-localPath=/home/kiteab/.local/share/plasma_icons/google-chrome.desktop
-url=file:///usr/share/applications/google-chrome.desktop
-
-[Containments][4][Applets][78]
-immutability=1
-plugin=org.kde.plasma.icon
-
-[Containments][4][Applets][78][Configuration]
-PreloadWeight=42
-localPath=/home/kiteab/.local/share/plasma_icons/org.kde.dolphin (1).desktop
-url=file:///usr/share/applications/org.kde.dolphin.desktop
-
-[Containments][4][Applets][79]
-immutability=1
-plugin=org.kde.plasma.icon
-
-[Containments][4][Applets][79][Configuration]
-PreloadWeight=42
-localPath=/home/kiteab/.local/share/plasma_icons/emacs.desktop
-url=file:///usr/share/applications/emacs.desktop
-
-[Containments][4][Applets][80]
-immutability=1
-plugin=org.kde.plasma.icon
-
-[Containments][4][Applets][80][Configuration]
-PreloadWeight=42
-localPath=/home/kiteab/.local/share/plasma_icons/idea.desktop
-url=file:///usr/share/applications/idea.desktop
-
-[Containments][4][ConfigDialog]
-DialogHeight=903
-DialogWidth=539
-
-[Containments][4][Configuration]
-PreloadWeight=0
-
-[Containments][4][General]
-alignment=10
-alignmentUpgraded=true
+[Containments][1][Applets][2][Configuration][General]
 animationLauncherBouncing=false
 animationWindowAddedInGroup=false
 animationWindowInAttention=false
-appletOrder=61;77;78;79;80;14;12;23
+isInLatteDock=true
+launchers59=applications:org.kde.dolphin.desktop,applications:google-chrome.desktop,applications:emacs.desktop,applications:idea.desktop,applications:visual-studio-code.desktop,applications:electron-qq.desktop,applications:hmcl.desktop,file:///usr/share/applications/steam.desktop,applications:com.obsproject.Studio.desktop,applications:virtualbox.desktop,applications:audacity.desktop,applications:org.inkscape.Inkscape.desktop,applications:gimp.desktop,applications:org.kde.krdc.desktop,applications:electron-netease-cloud-music.desktop,applications:teamspeak3.desktop,file:///usr/share/applications/discord.desktop,applications:telegramdesktop.desktop,applications:qv2ray.desktop
+
+[Containments][1][Applets][74]
+immutability=1
+plugin=OnzeMenu
+
+[Containments][1][Applets][74][Configuration]
+PreloadWeight=92
+
+[Containments][1][Applets][74][Configuration][ConfigDialog]
+DialogHeight=558
+DialogWidth=720
+
+[Containments][1][Applets][74][Configuration][General]
+customButtonImage=archlinux-logo-icon
+favoriteSystemActions=logout,lock-screen
+favoritesPortedToKAstats=true
+useCustomButtonImage=true
+
+[Containments][1][Applets][92]
+immutability=1
+plugin=org.kde.plasma.digitalclock
+
+[Containments][1][Applets][92][Configuration]
+PreloadWeight=42
+
+[Containments][1][Applets][92][Configuration][Appearance]
+customDateFormat=yyyy/M/d
+dateFormat=custom
+
+[Containments][1][Applets][92][Configuration][ConfigDialog]
+DialogHeight=558
+DialogWidth=720
+
+[Containments][1][Applets][93]
+immutability=1
+plugin=org.kde.plasma.systemtray
+
+[Containments][1][Applets][93][Configuration]
+PreloadWeight=52
+SystrayContainmentId=94
+
+[Containments][1][ConfigDialog]
+DialogHeight=903
+DialogWidth=539
+
+[Containments][1][Configuration]
+PreloadWeight=0
+
+[Containments][1][General]
+advanced=false
+alignment=10
+alignmentUpgraded=true
+appletOrder=74;2;93;92;110
 appletShadowsEnabled=false
 autoSizeEnabled=false
 dragActiveWindowEnabled=true
-durationTime=x3
-iconSize=28
-inConfigureAppletsMode=true
-panelPosition=10
+durationTime=x1
+floatingInternalGapIsForced=false
+iconSize=24
+lengthExtMargin=20
 panelSize=100
-panelTransparency=49
+panelTransparency=70
 plasmaBackgroundForPopups=true
-shadows=None
+shadowOpacity=60
+shadowSize=45
 shadowsUpgraded=true
-solidBackgroundForMaximized=true
+showGlow=false
 splitterPosition=1
-splitterPosition2=7
+splitterPosition2=4
 tasksUpgraded=true
+thickMargin=35
 titleTooltips=false
 zoomLevel=0
 
-[Containments][4][Indicator]
+[Containments][1][Indicator]
 customType=
 enabled=true
 enabledForApplets=true
-padding=0.07999999821186066
+padding=0.10000000149011612
 type=org.kde.latte.default
+
+[Containments][1][Indicator][org.kde.latte.default][General]
+lengthPadding=0
+thickMargin=0.07
+
+[Containments][94]
+PreloadWeight=42
+activityId=
+formfactor=2
+immutability=1
+lastScreen=-1
+location=4
+plugin=org.kde.plasma.private.systemtray
+wallpaperplugin=org.kde.image
+
+[Containments][94][Applets][100]
+immutability=1
+plugin=org.kde.plasma.vault
+
+[Containments][94][Applets][100][Configuration]
+PreloadWeight=42
+
+[Containments][94][Applets][101]
+immutability=1
+plugin=org.kde.plasma.devicenotifier
+
+[Containments][94][Applets][101][Configuration]
+PreloadWeight=42
+
+[Containments][94][Applets][102]
+immutability=1
+plugin=org.kde.plasma.nightcolorcontrol
+
+[Containments][94][Applets][102][Configuration]
+PreloadWeight=42
+
+[Containments][94][Applets][103]
+immutability=1
+plugin=org.kde.plasma.volume
+
+[Containments][94][Applets][103][Configuration]
+PreloadWeight=42
+
+[Containments][94][Applets][104]
+immutability=1
+plugin=org.kde.kdeconnect
+
+[Containments][94][Applets][104][Configuration]
+PreloadWeight=42
+
+[Containments][94][Applets][105]
+immutability=1
+plugin=org.kde.plasma.networkmanagement
+
+[Containments][94][Applets][105][Configuration]
+PreloadWeight=42
+
+[Containments][94][Applets][106]
+immutability=1
+plugin=org.kde.plasma.mediacontroller
+
+[Containments][94][Applets][106][Configuration]
+PreloadWeight=34
+
+[Containments][94][Applets][107]
+immutability=1
+plugin=org.kde.plasma.mediacontroller_plus
+
+[Containments][94][Applets][107][Configuration]
+PreloadWeight=34
+
+[Containments][94][Applets][108]
+immutability=1
+plugin=org.kde.ktp-contactlist
+
+[Containments][94][Applets][108][Configuration]
+PreloadWeight=42
+
+[Containments][94][Applets][109]
+immutability=1
+plugin=org.kde.plasma.battery
+
+[Containments][94][Applets][109][Configuration]
+PreloadWeight=42
+
+[Containments][94][Applets][95]
+immutability=1
+plugin=org.kde.plasma.clipboard
+
+[Containments][94][Applets][95][Configuration]
+PreloadWeight=42
+
+[Containments][94][Applets][96]
+immutability=1
+plugin=org.kde.plasma.notifications
+
+[Containments][94][Applets][96][Configuration]
+PreloadWeight=42
+
+[Containments][94][Applets][97]
+immutability=1
+plugin=org.kde.plasma.printmanager
+
+[Containments][94][Applets][97][Configuration]
+PreloadWeight=42
+
+[Containments][94][Applets][98]
+immutability=1
+plugin=org.kde.plasma.keyboardindicator
+
+[Containments][94][Applets][98][Configuration]
+PreloadWeight=42
+
+[Containments][94][Applets][99]
+immutability=1
+plugin=org.kde.plasma.keyboardlayout
+
+[Containments][94][Applets][99][Configuration]
+PreloadWeight=42
+
+[Containments][94][ConfigDialog]
+DialogHeight=558
+DialogWidth=720
+
+[Containments][94][General]
+extraItems=org.kde.plasma.mediacontroller_plus,org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.plasma.keyboardindicator,org.kde.plasma.keyboardlayout,org.kde.plasma.mediacontroller,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.devicenotifier,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.kdeconnect
+knownItems=org.kde.plasma.mediacontroller_plus,org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.plasma.keyboardindicator,org.kde.plasma.keyboardlayout,org.kde.plasma.mediacontroller,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.devicenotifier,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.kdeconnect
+scaleIconsToFit=true
 
 [LayoutSettings]
 activities=
