--- a/latte/KiteAB - macOS Style.layout.latte
+++ b/latte/KiteAB - macOS Style.layout.latte
@@ -76,9 +76,10 @@ PreloadWeight=0
 advanced=false
 alignmentUpgraded=true
 appletOrder=69;2;54;49
+backgroundRadius=13
+backgroundShadowSize=12
 durationTime=x1
 iconSize=38
-lengthExtMargin=4
 maxLength=80
 panelSize=100
 panelTransparency=30
@@ -86,11 +87,12 @@ shadowOpacity=60
 shadowSize=45
 shadowsUpgraded=true
 showGlow=false
-splitterPosition=2
-splitterPosition2=3
+splitterPosition=1
+splitterPosition2=6
 tasksUpgraded=true
 thickMargin=25
-zoomLevel=12
+titleTooltips=false
+zoomLevel=16
 
 [Containments][1][Indicator]
 customType=
@@ -131,14 +133,14 @@ immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][15][Applets][18][Configuration]
-PreloadWeight=9
+PreloadWeight=0
 
 [Containments][15][Applets][19]
 immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][15][Applets][19][Configuration]
-PreloadWeight=49
+PreloadWeight=30
 
 [Containments][15][Applets][19][Configuration][ConfigDialog]
 DialogHeight=540
@@ -149,7 +151,7 @@ immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][15][Applets][21][Configuration]
-PreloadWeight=16
+PreloadWeight=0
 
 [Containments][15][Applets][28]
 immutability=1
@@ -235,9 +237,14 @@ plugin=org.kde.plasma.mediacontroller
 [Containments][15][Applets][73][Configuration]
 PreloadWeight=0
 
+[Containments][15][ConfigDialog]
+DialogHeight=558
+DialogWidth=720
+
 [Containments][15][General]
 extraItems=org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.keyboardindicator,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.plasma.mediacontroller_plus,org.kde.plasma.keyboardlayout
 knownItems=org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.keyboardindicator,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.plasma.mediacontroller_plus,org.kde.plasma.keyboardlayout
+scaleIconsToFit=true
 
 [Containments][4]
 activityId=
@@ -265,7 +272,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][4][Applets][12][Configuration]
-PreloadWeight=40
+PreloadWeight=16
 
 [Containments][4][Applets][12][Configuration][Appearance]
 customDateFormat=ddd
@@ -283,7 +290,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][4][Applets][14][Configuration]
-PreloadWeight=89
+PreloadWeight=70
 SystrayContainmentId=15
 
 [Containments][4][Applets][23]
@@ -291,7 +298,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][4][Applets][23][Configuration]
-PreloadWeight=99
+PreloadWeight=81
 
 [Containments][4][Applets][61]
 immutability=1
