--- a/latte/KiteAB - Windows Style.layout.latte
+++ b/latte/KiteAB - Windows Style.layout.latte
@@ -28,7 +28,11 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][1][Applets][110][Configuration]
-PreloadWeight=92
+PreloadWeight=100
+
+[Containments][1][Applets][111]
+immutability=1
+plugin=org.kde.plasma.appmenu
 
 [Containments][1][Applets][2]
 immutability=1
@@ -81,7 +85,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][1][Applets][93][Configuration]
-PreloadWeight=49
+PreloadWeight=54
 SystrayContainmentId=94
 
 [Containments][1][ConfigDialog]
@@ -95,7 +99,7 @@ PreloadWeight=0
 advanced=false
 alignment=10
 alignmentUpgraded=true
-appletOrder=74;2;93;92;110
+appletOrder=111;74;2;93;92;110
 appletShadowsEnabled=false
 autoSizeEnabled=false
 dragActiveWindowEnabled=true
@@ -110,10 +114,10 @@ shadowOpacity=60
 shadowSize=45
 shadowsUpgraded=true
 showGlow=false
-splitterPosition=1
-splitterPosition2=4
+splitterPosition=2
+splitterPosition2=5
 tasksUpgraded=true
-thickMargin=35
+thickMargin=30
 titleTooltips=false
 zoomLevel=0
 
@@ -178,7 +182,7 @@ immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][94][Applets][105][Configuration]
-PreloadWeight=34
+PreloadWeight=39
 
 [Containments][94][Applets][106]
 immutability=1
