--- a/latte/KiteAB - Windows Style.layout.latte
+++ b/latte/KiteAB - Windows Style.layout.latte
@@ -46,7 +46,7 @@ animationLauncherBouncing=false
 animationWindowAddedInGroup=false
 animationWindowInAttention=false
 isInLatteDock=true
-launchers59=applications:org.kde.dolphin.desktop,applications:google-chrome.desktop,applications:emacs.desktop,applications:idea.desktop,applications:visual-studio-code.desktop,applications:electron-qq.desktop,applications:hmcl.desktop,file:///usr/share/applications/steam.desktop,applications:com.obsproject.Studio.desktop,applications:virtualbox.desktop,applications:audacity.desktop,applications:org.inkscape.Inkscape.desktop,applications:gimp.desktop,applications:org.kde.krdc.desktop,applications:electron-netease-cloud-music.desktop,applications:teamspeak3.desktop,file:///usr/share/applications/discord.desktop,applications:telegramdesktop.desktop,applications:qv2ray.desktop
+launchers59=applications:org.kde.dolphin.desktop,applications:google-chrome.desktop,applications:emacs.desktop,applications:idea.desktop,applications:visual-studio-code.desktop,applications:com.qq.tim.spark.desktop,applications:hmcl.desktop,file:///usr/share/applications/steam.desktop,applications:com.obsproject.Studio.desktop,applications:virtualbox.desktop,applications:audacity.desktop,applications:org.inkscape.Inkscape.desktop,applications:gimp.desktop,applications:org.kde.krdc.desktop,applications:electron-netease-cloud-music.desktop,applications:teamspeak3.desktop,file:///usr/share/applications/discord.desktop,applications:telegramdesktop.desktop,applications:qv2ray.desktop
 
 [Containments][1][Applets][74]
 immutability=1
