--- a/latte/KiteAB - Windows Style.layout.latte
+++ b/latte/KiteAB - Windows Style.layout.latte
@@ -53,7 +53,7 @@ immutability=1
 plugin=OnzeMenu
 
 [Containments][1][Applets][74][Configuration]
-PreloadWeight=84
+PreloadWeight=89
 
 [Containments][1][Applets][74][Configuration][ConfigDialog]
 DialogHeight=558
@@ -64,6 +64,9 @@ customButtonImage=archlinux-logo-icon
 favoriteSystemActions=logout,lock-screen
 favoritesPortedToKAstats=true
 useCustomButtonImage=true
+
+[Containments][1][Applets][74][Shortcuts]
+global=Meta+Z
 
 [Containments][1][Applets][92]
 immutability=1
@@ -85,7 +88,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][1][Applets][93][Configuration]
-PreloadWeight=74
+PreloadWeight=79
 SystrayContainmentId=94
 
 [Containments][1][ConfigDialog]
@@ -154,7 +157,7 @@ immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][94][Applets][101][Configuration]
-PreloadWeight=39
+PreloadWeight=44
 
 [Containments][94][Applets][102]
 immutability=1
