--- a/latte/KiteAB - Windows Style.layout.latte
+++ b/latte/KiteAB - Windows Style.layout.latte
@@ -28,11 +28,14 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][1][Applets][110][Configuration]
-PreloadWeight=100
+PreloadWeight=92
 
 [Containments][1][Applets][111]
 immutability=1
 plugin=org.kde.plasma.appmenu
+
+[Containments][1][Applets][111][Configuration]
+PreloadWeight=42
 
 [Containments][1][Applets][2]
 immutability=1
@@ -46,14 +49,14 @@ animationLauncherBouncing=false
 animationWindowAddedInGroup=false
 animationWindowInAttention=false
 isInLatteDock=true
-launchers59=applications:org.kde.dolphin.desktop,applications:google-chrome.desktop,applications:idea.desktop,applications:com.qq.tim.spark.desktop,applications:hmcl.desktop,file:///usr/share/applications/steam.desktop,applications:com.obsproject.Studio.desktop,applications:org.inkscape.Inkscape.desktop,applications:org.kde.krdc.desktop,applications:org.remmina.Remmina.desktop,applications:electron-netease-cloud-music.desktop,applications:teamspeak3.desktop,file:///usr/share/applications/discord.desktop,applications:telegramdesktop.desktop,applications:qv2ray.desktop
+launchers59=applications:org.kde.dolphin.desktop,applications:google-chrome.desktop,applications:idea.desktop,applications:com.qq.tim.spark.desktop,applications:hmcl.desktop,file:///usr/share/applications/steam.desktop,applications:com.obsproject.Studio.desktop,applications:org.inkscape.Inkscape.desktop,applications:org.remmina.Remmina.desktop,applications:electron-netease-cloud-music.desktop,applications:teamspeak3.desktop,file:///usr/share/applications/discord.desktop,applications:telegramdesktop.desktop,applications:qv2ray.desktop
 
 [Containments][1][Applets][74]
 immutability=1
 plugin=OnzeMenu
 
 [Containments][1][Applets][74][Configuration]
-PreloadWeight=100
+PreloadWeight=92
 
 [Containments][1][Applets][74][Configuration][ConfigDialog]
 DialogHeight=558
@@ -73,7 +76,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][1][Applets][92][Configuration]
-PreloadWeight=44
+PreloadWeight=36
 
 [Containments][1][Applets][92][Configuration][Appearance]
 customDateFormat=yyyy/M/d
@@ -88,7 +91,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][1][Applets][93][Configuration]
-PreloadWeight=99
+PreloadWeight=91
 SystrayContainmentId=94
 
 [Containments][1][ConfigDialog]
@@ -136,7 +139,7 @@ lengthPadding=0
 thickMargin=0.07
 
 [Containments][94]
-PreloadWeight=34
+PreloadWeight=26
 activityId=
 formfactor=2
 immutability=1
@@ -150,42 +153,42 @@ immutability=1
 plugin=org.kde.plasma.vault
 
 [Containments][94][Applets][100][Configuration]
-PreloadWeight=34
+PreloadWeight=26
 
 [Containments][94][Applets][101]
 immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][94][Applets][101][Configuration]
-PreloadWeight=44
+PreloadWeight=36
 
 [Containments][94][Applets][102]
 immutability=1
 plugin=org.kde.plasma.nightcolorcontrol
 
 [Containments][94][Applets][102][Configuration]
-PreloadWeight=34
+PreloadWeight=26
 
 [Containments][94][Applets][103]
 immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][94][Applets][103][Configuration]
-PreloadWeight=34
+PreloadWeight=26
 
 [Containments][94][Applets][104]
 immutability=1
 plugin=org.kde.kdeconnect
 
 [Containments][94][Applets][104][Configuration]
-PreloadWeight=34
+PreloadWeight=26
 
 [Containments][94][Applets][105]
 immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][94][Applets][105][Configuration]
-PreloadWeight=54
+PreloadWeight=46
 
 [Containments][94][Applets][106]
 immutability=1
@@ -206,49 +209,49 @@ immutability=1
 plugin=org.kde.ktp-contactlist
 
 [Containments][94][Applets][108][Configuration]
-PreloadWeight=34
+PreloadWeight=26
 
 [Containments][94][Applets][109]
 immutability=1
 plugin=org.kde.plasma.battery
 
 [Containments][94][Applets][109][Configuration]
-PreloadWeight=39
+PreloadWeight=31
 
 [Containments][94][Applets][95]
 immutability=1
 plugin=org.kde.plasma.clipboard
 
 [Containments][94][Applets][95][Configuration]
-PreloadWeight=34
+PreloadWeight=26
 
 [Containments][94][Applets][96]
 immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][94][Applets][96][Configuration]
-PreloadWeight=49
+PreloadWeight=41
 
 [Containments][94][Applets][97]
 immutability=1
 plugin=org.kde.plasma.printmanager
 
 [Containments][94][Applets][97][Configuration]
-PreloadWeight=34
+PreloadWeight=26
 
 [Containments][94][Applets][98]
 immutability=1
 plugin=org.kde.plasma.keyboardindicator
 
 [Containments][94][Applets][98][Configuration]
-PreloadWeight=34
+PreloadWeight=26
 
 [Containments][94][Applets][99]
 immutability=1
 plugin=org.kde.plasma.keyboardlayout
 
 [Containments][94][Applets][99][Configuration]
-PreloadWeight=34
+PreloadWeight=26
 
 [Containments][94][ConfigDialog]
 DialogHeight=558
