--- a/latte/KiteAB - Windows Style.layout.latte
+++ b/latte/KiteAB - Windows Style.layout.latte
@@ -35,7 +35,7 @@ immutability=1
 plugin=org.kde.plasma.appmenu
 
 [Containments][1][Applets][111][Configuration]
-PreloadWeight=42
+PreloadWeight=34
 
 [Containments][1][Applets][2]
 immutability=1
@@ -56,7 +56,7 @@ immutability=1
 plugin=OnzeMenu
 
 [Containments][1][Applets][74][Configuration]
-PreloadWeight=92
+PreloadWeight=84
 
 [Containments][1][Applets][74][Configuration][ConfigDialog]
 DialogHeight=558
@@ -76,11 +76,12 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][1][Applets][92][Configuration]
-PreloadWeight=36
+PreloadWeight=28
 
 [Containments][1][Applets][92][Configuration][Appearance]
 customDateFormat=yyyy/M/d
 dateFormat=custom
+use24hFormat=2
 
 [Containments][1][Applets][92][Configuration][ConfigDialog]
 DialogHeight=558
@@ -91,7 +92,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][1][Applets][93][Configuration]
-PreloadWeight=100
+PreloadWeight=92
 SystrayContainmentId=94
 
 [Containments][1][ConfigDialog]
@@ -139,7 +140,7 @@ lengthPadding=0
 thickMargin=0.07
 
 [Containments][94]
-PreloadWeight=26
+PreloadWeight=18
 activityId=
 formfactor=2
 immutability=1
@@ -153,105 +154,105 @@ immutability=1
 plugin=org.kde.plasma.vault
 
 [Containments][94][Applets][100][Configuration]
-PreloadWeight=26
+PreloadWeight=18
 
 [Containments][94][Applets][101]
 immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][94][Applets][101][Configuration]
-PreloadWeight=36
+PreloadWeight=28
 
 [Containments][94][Applets][102]
 immutability=1
 plugin=org.kde.plasma.nightcolorcontrol
 
 [Containments][94][Applets][102][Configuration]
-PreloadWeight=26
+PreloadWeight=18
 
 [Containments][94][Applets][103]
 immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][94][Applets][103][Configuration]
-PreloadWeight=26
+PreloadWeight=18
 
 [Containments][94][Applets][104]
 immutability=1
 plugin=org.kde.kdeconnect
 
 [Containments][94][Applets][104][Configuration]
-PreloadWeight=26
+PreloadWeight=18
 
 [Containments][94][Applets][105]
 immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][94][Applets][105][Configuration]
-PreloadWeight=46
-
-[Containments][94][Applets][106]
-immutability=1
-plugin=org.kde.plasma.mediacontroller
-
-[Containments][94][Applets][106][Configuration]
-PreloadWeight=0
-
-[Containments][94][Applets][107]
-immutability=1
-plugin=org.kde.plasma.mediacontroller_plus
-
-[Containments][94][Applets][107][Configuration]
-PreloadWeight=0
+PreloadWeight=38
 
 [Containments][94][Applets][108]
 immutability=1
 plugin=org.kde.ktp-contactlist
 
 [Containments][94][Applets][108][Configuration]
-PreloadWeight=26
+PreloadWeight=18
 
 [Containments][94][Applets][109]
 immutability=1
 plugin=org.kde.plasma.battery
 
 [Containments][94][Applets][109][Configuration]
-PreloadWeight=31
+PreloadWeight=23
+
+[Containments][94][Applets][112]
+immutability=1
+plugin=org.kde.plasma.mediacontroller_plus
+
+[Containments][94][Applets][112][Configuration]
+PreloadWeight=2
+
+[Containments][94][Applets][113]
+immutability=1
+plugin=org.kde.plasma.mediacontroller
+
+[Containments][94][Applets][113][Configuration]
+PreloadWeight=2
 
 [Containments][94][Applets][95]
 immutability=1
 plugin=org.kde.plasma.clipboard
 
 [Containments][94][Applets][95][Configuration]
-PreloadWeight=26
+PreloadWeight=18
 
 [Containments][94][Applets][96]
 immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][94][Applets][96][Configuration]
-PreloadWeight=51
+PreloadWeight=43
 
 [Containments][94][Applets][97]
 immutability=1
 plugin=org.kde.plasma.printmanager
 
 [Containments][94][Applets][97][Configuration]
-PreloadWeight=26
+PreloadWeight=18
 
 [Containments][94][Applets][98]
 immutability=1
 plugin=org.kde.plasma.keyboardindicator
 
 [Containments][94][Applets][98][Configuration]
-PreloadWeight=26
+PreloadWeight=18
 
 [Containments][94][Applets][99]
 immutability=1
 plugin=org.kde.plasma.keyboardlayout
 
 [Containments][94][Applets][99][Configuration]
-PreloadWeight=26
+PreloadWeight=18
 
 [Containments][94][ConfigDialog]
 DialogHeight=558
