--- a/latte/KiteAB - Windows Style.layout.latte
+++ b/latte/KiteAB - Windows Style.layout.latte
@@ -210,14 +210,14 @@ immutability=1
 plugin=org.kde.plasma.mediacontroller_plus
 
 [Containments][94][Applets][112][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][94][Applets][113]
 immutability=1
 plugin=org.kde.plasma.mediacontroller
 
 [Containments][94][Applets][113][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][94][Applets][95]
 immutability=1
@@ -260,6 +260,7 @@ DialogWidth=720
 
 [Containments][94][General]
 extraItems=org.kde.plasma.mediacontroller_plus,org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.plasma.keyboardindicator,org.kde.plasma.keyboardlayout,org.kde.plasma.mediacontroller,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.devicenotifier,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.kdeconnect
+hiddenItems=org.kde.plasma.notifications
 knownItems=org.kde.plasma.mediacontroller_plus,org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.plasma.keyboardindicator,org.kde.plasma.keyboardlayout,org.kde.plasma.mediacontroller,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.devicenotifier,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.kdeconnect
 scaleIconsToFit=true
 
