--- a/latte/KiteAB - Windows Style.layout.latte
+++ b/latte/KiteAB - Windows Style.layout.latte
@@ -37,6 +37,10 @@ plugin=org.kde.plasma.appmenu
 [Containments][1][Applets][111][Configuration]
 PreloadWeight=34
 
+[Containments][1][Applets][111][Configuration][ConfigDialog]
+DialogHeight=558
+DialogWidth=720
+
 [Containments][1][Applets][2]
 immutability=1
 plugin=org.kde.latte.plasmoid
@@ -175,7 +179,7 @@ immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][94][Applets][103][Configuration]
-PreloadWeight=68
+PreloadWeight=83
 
 [Containments][94][Applets][104]
 immutability=1
