--- a/latte/KiteAB - Windows Style.layout.latte
+++ b/latte/KiteAB - Windows Style.layout.latte
@@ -60,7 +60,7 @@ immutability=1
 plugin=OnzeMenu
 
 [Containments][1][Applets][74][Configuration]
-PreloadWeight=76
+PreloadWeight=96
 
 [Containments][1][Applets][74][Configuration][ConfigDialog]
 DialogHeight=558
@@ -73,7 +73,7 @@ favoritesPortedToKAstats=true
 useCustomButtonImage=true
 
 [Containments][1][Applets][74][Shortcuts]
-global=Meta+Z
+global=
 
 [Containments][1][Applets][92]
 immutability=1
@@ -179,7 +179,7 @@ immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][94][Applets][103][Configuration]
-PreloadWeight=95
+PreloadWeight=100
 
 [Containments][94][Applets][104]
 immutability=1
