--- a/latte/KiteAB - Windows Style.layout.latte
+++ b/latte/KiteAB - Windows Style.layout.latte
@@ -35,7 +35,7 @@ immutability=1
 plugin=org.kde.plasma.appmenu
 
 [Containments][1][Applets][111][Configuration]
-PreloadWeight=26
+PreloadWeight=18
 
 [Containments][1][Applets][111][Configuration][ConfigDialog]
 DialogHeight=558
@@ -53,7 +53,7 @@ animationLauncherBouncing=false
 animationWindowAddedInGroup=false
 animationWindowInAttention=false
 isInLatteDock=true
-launchers59=applications:org.kde.dolphin.desktop,applications:google-chrome.desktop,applications:idea.desktop,applications:com.qq.tim.spark.desktop,applications:mixxx.desktop,applications:hmcl.desktop,applications:steam-native.desktop,applications:com.obsproject.Studio.desktop,applications:org.inkscape.Inkscape.desktop,applications:org.remmina.Remmina.desktop,applications:electron-netease-cloud-music.desktop,applications:teamspeak3.desktop,file:///usr/share/applications/discord.desktop,applications:telegramdesktop.desktop,applications:qv2ray.desktop
+launchers59=applications:org.kde.dolphin.desktop,applications:google-chrome.desktop,applications:idea.desktop,applications:com.qq.tim.spark.desktop,applications:hmcl.desktop,applications:steam-native.desktop,applications:com.obsproject.Studio.desktop,applications:org.inkscape.Inkscape.desktop,applications:org.remmina.Remmina.desktop,applications:electron-netease-cloud-music.desktop,applications:teamspeak3.desktop,file:///usr/share/applications/discord.desktop,applications:qv2ray.desktop
 
 [Containments][1][Applets][74]
 immutability=1
@@ -80,7 +80,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][1][Applets][92][Configuration]
-PreloadWeight=30
+PreloadWeight=22
 
 [Containments][1][Applets][92][Configuration][Appearance]
 customDateFormat=yyyy/M/d
@@ -144,7 +144,7 @@ lengthPadding=0
 thickMargin=0.07
 
 [Containments][94]
-PreloadWeight=10
+PreloadWeight=2
 activityId=
 formfactor=2
 immutability=1
@@ -158,21 +158,21 @@ immutability=1
 plugin=org.kde.plasma.vault
 
 [Containments][94][Applets][100][Configuration]
-PreloadWeight=10
+PreloadWeight=2
 
 [Containments][94][Applets][101]
 immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][94][Applets][101][Configuration]
-PreloadWeight=20
+PreloadWeight=12
 
 [Containments][94][Applets][102]
 immutability=1
 plugin=org.kde.plasma.nightcolorcontrol
 
 [Containments][94][Applets][102][Configuration]
-PreloadWeight=10
+PreloadWeight=2
 
 [Containments][94][Applets][103]
 immutability=1
@@ -186,28 +186,28 @@ immutability=1
 plugin=org.kde.kdeconnect
 
 [Containments][94][Applets][104][Configuration]
-PreloadWeight=30
+PreloadWeight=22
 
 [Containments][94][Applets][105]
 immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][94][Applets][105][Configuration]
-PreloadWeight=35
+PreloadWeight=32
 
 [Containments][94][Applets][108]
 immutability=1
 plugin=org.kde.ktp-contactlist
 
 [Containments][94][Applets][108][Configuration]
-PreloadWeight=10
+PreloadWeight=2
 
 [Containments][94][Applets][109]
 immutability=1
 plugin=org.kde.plasma.battery
 
 [Containments][94][Applets][109][Configuration]
-PreloadWeight=15
+PreloadWeight=7
 
 [Containments][94][Applets][112]
 immutability=1
@@ -228,35 +228,35 @@ immutability=1
 plugin=org.kde.plasma.clipboard
 
 [Containments][94][Applets][95][Configuration]
-PreloadWeight=10
+PreloadWeight=2
 
 [Containments][94][Applets][96]
 immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][94][Applets][96][Configuration]
-PreloadWeight=35
+PreloadWeight=27
 
 [Containments][94][Applets][97]
 immutability=1
 plugin=org.kde.plasma.printmanager
 
 [Containments][94][Applets][97][Configuration]
-PreloadWeight=10
+PreloadWeight=2
 
 [Containments][94][Applets][98]
 immutability=1
 plugin=org.kde.plasma.keyboardindicator
 
 [Containments][94][Applets][98][Configuration]
-PreloadWeight=10
+PreloadWeight=2
 
 [Containments][94][Applets][99]
 immutability=1
 plugin=org.kde.plasma.keyboardlayout
 
 [Containments][94][Applets][99][Configuration]
-PreloadWeight=10
+PreloadWeight=2
 
 [Containments][94][Applets][99][Configuration][ConfigDialog]
 DialogHeight=558
