--- a/latte/KiteAB - Windows Style.layout.latte
+++ b/latte/KiteAB - Windows Style.layout.latte
@@ -35,7 +35,7 @@ immutability=1
 plugin=org.kde.plasma.appmenu
 
 [Containments][1][Applets][111][Configuration]
-PreloadWeight=18
+PreloadWeight=10
 
 [Containments][1][Applets][111][Configuration][ConfigDialog]
 DialogHeight=558
@@ -60,27 +60,27 @@ immutability=1
 plugin=OnzeMenu
 
 [Containments][1][Applets][74][Configuration]
-PreloadWeight=100
+PreloadWeight=92
 
 [Containments][1][Applets][74][Configuration][ConfigDialog]
 DialogHeight=558
 DialogWidth=720
 
 [Containments][1][Applets][74][Configuration][General]
-customButtonImage=archlinux-logo-icon
+customButtonImage=distributor-logo-archlinux
 favoriteSystemActions=logout,lock-screen
 favoritesPortedToKAstats=true
 useCustomButtonImage=true
 
 [Containments][1][Applets][74][Shortcuts]
-global=
+global=Meta+Z
 
 [Containments][1][Applets][92]
 immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][1][Applets][92][Configuration]
-PreloadWeight=22
+PreloadWeight=14
 
 [Containments][1][Applets][92][Configuration][Appearance]
 customDateFormat=yyyy/M/d
@@ -144,7 +144,7 @@ lengthPadding=0
 thickMargin=0.07
 
 [Containments][94]
-PreloadWeight=2
+PreloadWeight=0
 activityId=
 formfactor=2
 immutability=1
@@ -158,56 +158,60 @@ immutability=1
 plugin=org.kde.plasma.vault
 
 [Containments][94][Applets][100][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][94][Applets][101]
 immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][94][Applets][101][Configuration]
-PreloadWeight=12
+PreloadWeight=4
 
 [Containments][94][Applets][102]
 immutability=1
 plugin=org.kde.plasma.nightcolorcontrol
 
 [Containments][94][Applets][102][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][94][Applets][103]
 immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][94][Applets][103][Configuration]
-PreloadWeight=100
+PreloadWeight=92
 
 [Containments][94][Applets][104]
 immutability=1
 plugin=org.kde.kdeconnect
 
 [Containments][94][Applets][104][Configuration]
-PreloadWeight=22
+PreloadWeight=14
 
 [Containments][94][Applets][105]
 immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][94][Applets][105][Configuration]
-PreloadWeight=32
+PreloadWeight=24
 
 [Containments][94][Applets][108]
 immutability=1
 plugin=org.kde.ktp-contactlist
 
 [Containments][94][Applets][108][Configuration]
-PreloadWeight=2
+PreloadWeight=5
+
+[Containments][94][Applets][108][Configuration][ConfigDialog]
+DialogHeight=558
+DialogWidth=720
 
 [Containments][94][Applets][109]
 immutability=1
 plugin=org.kde.plasma.battery
 
 [Containments][94][Applets][109][Configuration]
-PreloadWeight=7
+PreloadWeight=0
 
 [Containments][94][Applets][112]
 immutability=1
@@ -228,35 +232,35 @@ immutability=1
 plugin=org.kde.plasma.clipboard
 
 [Containments][94][Applets][95][Configuration]
-PreloadWeight=2
+PreloadWeight=5
 
 [Containments][94][Applets][96]
 immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][94][Applets][96][Configuration]
-PreloadWeight=27
+PreloadWeight=19
 
 [Containments][94][Applets][97]
 immutability=1
 plugin=org.kde.plasma.printmanager
 
 [Containments][94][Applets][97][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][94][Applets][98]
 immutability=1
 plugin=org.kde.plasma.keyboardindicator
 
 [Containments][94][Applets][98][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][94][Applets][99]
 immutability=1
 plugin=org.kde.plasma.keyboardlayout
 
 [Containments][94][Applets][99][Configuration]
-PreloadWeight=2
+PreloadWeight=0
 
 [Containments][94][Applets][99][Configuration][ConfigDialog]
 DialogHeight=558
@@ -268,7 +272,7 @@ DialogWidth=720
 
 [Containments][94][General]
 extraItems=org.kde.plasma.mediacontroller_plus,org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.plasma.keyboardindicator,org.kde.plasma.keyboardlayout,org.kde.plasma.mediacontroller,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.devicenotifier,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.kdeconnect
-hiddenItems=org.kde.plasma.notifications
+hiddenItems=org.kde.plasma.notifications,org.kde.ktp-contactlist
 knownItems=org.kde.plasma.mediacontroller_plus,org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.plasma.keyboardindicator,org.kde.plasma.keyboardlayout,org.kde.plasma.mediacontroller,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.devicenotifier,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.kdeconnect
 scaleIconsToFit=true
 
