--- a/latte/KiteAB - Windows Style.layout.latte
+++ b/latte/KiteAB - Windows Style.layout.latte
@@ -53,7 +53,7 @@ animationLauncherBouncing=false
 animationWindowAddedInGroup=false
 animationWindowInAttention=false
 isInLatteDock=true
-launchers59=applications:org.kde.dolphin.desktop,applications:google-chrome.desktop,applications:idea.desktop,applications:com.qq.tim.spark.desktop,applications:hmcl.desktop,applications:steam-native.desktop,applications:com.obsproject.Studio.desktop,applications:org.inkscape.Inkscape.desktop,applications:org.remmina.Remmina.desktop,applications:electron-netease-cloud-music.desktop,applications:teamspeak3.desktop,file:///usr/share/applications/discord.desktop,applications:qv2ray.desktop
+launchers59=applications:org.kde.dolphin.desktop,applications:google-chrome.desktop,applications:idea.desktop,applications:com.qq.tim.spark.desktop,applications:hmcl.desktop,applications:steam-native.desktop,applications:com.obsproject.Studio.desktop,applications:org.inkscape.Inkscape.desktop,applications:org.remmina.Remmina.desktop,applications:electron-netease-cloud-music.desktop,applications:teamspeak3.desktop,file:///usr/share/applications/discord.desktop
 
 [Containments][1][Applets][74]
 immutability=1
