--- a/latte/KiteAB - Windows Style.layout.latte
+++ b/latte/KiteAB - Windows Style.layout.latte
@@ -28,18 +28,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][1][Applets][110][Configuration]
-PreloadWeight=100
-
-[Containments][1][Applets][111]
-immutability=1
-plugin=org.kde.plasma.appmenu
-
-[Containments][1][Applets][111][Configuration]
-PreloadWeight=10
-
-[Containments][1][Applets][111][Configuration][ConfigDialog]
-DialogHeight=558
-DialogWidth=720
+PreloadWeight=97
 
 [Containments][1][Applets][2]
 immutability=1
@@ -60,7 +49,7 @@ immutability=1
 plugin=OnzeMenu
 
 [Containments][1][Applets][74][Configuration]
-PreloadWeight=92
+PreloadWeight=84
 
 [Containments][1][Applets][74][Configuration][ConfigDialog]
 DialogHeight=558
@@ -80,7 +69,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][1][Applets][92][Configuration]
-PreloadWeight=54
+PreloadWeight=46
 
 [Containments][1][Applets][92][Configuration][Appearance]
 customDateFormat=yyyy/M/d
@@ -96,7 +85,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][1][Applets][93][Configuration]
-PreloadWeight=100
+PreloadWeight=97
 SystrayContainmentId=94
 
 [Containments][1][ConfigDialog]
@@ -110,13 +99,14 @@ PreloadWeight=0
 advanced=false
 alignment=10
 alignmentUpgraded=true
-appletOrder=111;74;2;93;92;110
+appletOrder=74;2;93;92;110
 appletShadowsEnabled=false
 autoSizeEnabled=false
 dragActiveWindowEnabled=true
 durationTime=x1
 floatingInternalGapIsForced=false
 iconSize=24
+inConfigureAppletsMode=true
 lengthExtMargin=20
 panelSize=100
 panelTransparency=70
@@ -125,8 +115,8 @@ shadowOpacity=60
 shadowSize=45
 shadowsUpgraded=true
 showGlow=false
-splitterPosition=2
-splitterPosition2=5
+splitterPosition=1
+splitterPosition2=4
 tasksUpgraded=true
 thickMargin=30
 titleTooltips=false
@@ -165,7 +155,7 @@ immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][94][Applets][101][Configuration]
-PreloadWeight=9
+PreloadWeight=1
 
 [Containments][94][Applets][102]
 immutability=1
@@ -179,28 +169,28 @@ immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][94][Applets][103][Configuration]
-PreloadWeight=100
+PreloadWeight=92
 
 [Containments][94][Applets][104]
 immutability=1
 plugin=org.kde.kdeconnect
 
 [Containments][94][Applets][104][Configuration]
-PreloadWeight=24
+PreloadWeight=31
 
 [Containments][94][Applets][105]
 immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][94][Applets][105][Configuration]
-PreloadWeight=34
+PreloadWeight=31
 
 [Containments][94][Applets][108]
 immutability=1
 plugin=org.kde.ktp-contactlist
 
 [Containments][94][Applets][108][Configuration]
-PreloadWeight=5
+PreloadWeight=0
 
 [Containments][94][Applets][108][Configuration][ConfigDialog]
 DialogHeight=558
@@ -211,35 +201,35 @@ immutability=1
 plugin=org.kde.plasma.battery
 
 [Containments][94][Applets][109][Configuration]
-PreloadWeight=20
+PreloadWeight=12
 
 [Containments][94][Applets][112]
 immutability=1
 plugin=org.kde.plasma.mediacontroller_plus
 
 [Containments][94][Applets][112][Configuration]
-PreloadWeight=0
+PreloadWeight=2
 
 [Containments][94][Applets][113]
 immutability=1
 plugin=org.kde.plasma.mediacontroller
 
 [Containments][94][Applets][113][Configuration]
-PreloadWeight=0
+PreloadWeight=2
 
 [Containments][94][Applets][95]
 immutability=1
 plugin=org.kde.plasma.clipboard
 
 [Containments][94][Applets][95][Configuration]
-PreloadWeight=5
+PreloadWeight=0
 
 [Containments][94][Applets][96]
 immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][94][Applets][96][Configuration]
-PreloadWeight=19
+PreloadWeight=11
 
 [Containments][94][Applets][97]
 immutability=1
